--- a/server/client/src/index.css
+++ b/server/client/src/index.css
@@ -1,9 +1,5 @@
-body {
-    margin: 0;
-    height: 100%;
-}
-
 #container {
+    height: 100%;
     background-color: #26547C;
     display: flex;
     align-items: center;
@@ -16,6 +12,13 @@ body {
     background-color: #FCFCFC;
 }
 
+#signupContainer {
+    max-width: 70%;
+    border-radius: 10px;
+    padding: 5%;
+    background-color: #FCFCFC;
+}
+
 .btn-primary {
     background-color: #26547C !important;
 }
@@ -23,3 +26,4 @@ body {
 .btn-link > a {
     color: #26547C !important;
 }
+
