No, Rose, they are not breathing. And they have no arms or legs… Where are they? You know what? If we come across somebody with no arms or legs, do we bother resuscitating them? I mean, what quality of life do we have there?

--- a/server/client/src/index.css
+++ b/server/client/src/index.css
@@ -8,8 +8,6 @@ html, body, #root, #root>div{
     background-color: #26547C !important;
 }
 
-
-
 .div-center {
     border-radius: 10px;
     background-color: #FCFCFC;
@@ -45,6 +43,11 @@ html, body, #root, #root>div{
 .profileBox {
     width: 80%;
     height: 50%;
+}
+
+.analyticsBox {
+    width: 70%;
+    height: 70%;
 }
 
 div.content {
@@ -137,4 +140,8 @@ footer {
 
 .homeTitle {
     text-align: center;
+}
+
+.ageChart {
+    padding: 20px;
 }
