--- a/server/client/src/login.module.css
+++ b/server/client/src/login.module.css
@@ -18,9 +18,8 @@ button:first-of-type {
 }
 
 .link {
-    color: #26547C !important;
+    color: #26547C;
 }
-
 .backColor {
     background-color: #26547C !important;
 }
