--- a/server/client/src/ranking/ranking.module.css
+++ b/server/client/src/ranking/ranking.module.css
@@ -3,5 +3,12 @@
     height: 50px;
     object-fit: cover;
     margin-right: 20px;
+}
 
+.backColor {
+    background-color: #26547C !important;
+}
+
+.a{
+    color: #26547C !important;
 }
