--- a/server/client/src/profile/profile.module.css
+++ b/server/client/src/profile/profile.module.css
@@ -3,8 +3,10 @@
     height: 200px;
     object-fit: cover;
 }
-.center {
 
+.center {
+    display: flex;
+    align-content: center;
 }
 
 .padded {
